Projected coordinates before kriging

--- a/data/oviedo_winter/kriging_netatmo.ipynb
+++ b/data/oviedo_winter/kriging_netatmo.ipynb
@@ -68,31 +68,31 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>70:ee:50:00:c9:6e</td>\n",
-       "      <td>-1.108802</td>\n",
-       "      <td>-5.849700</td>\n",
-       "      <td>43.361700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>70:ee:50:00:ea:00</td>\n",
        "      <td>2.147818</td>\n",
        "      <td>-5.866472</td>\n",
        "      <td>43.368765</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>70:ee:50:01:33:6a</td>\n",
        "      <td>0.029142</td>\n",
        "      <td>-5.847184</td>\n",
        "      <td>43.360374</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>70:ee:50:02:e6:38</td>\n",
        "      <td>-0.261849</td>\n",
        "      <td>-5.816177</td>\n",
        "      <td>43.441605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70:ee:50:03:d3:54</td>\n",
+       "      <td>1.404223</td>\n",
+       "      <td>-5.864682</td>\n",
+       "      <td>43.368613</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -101,10 +101,10 @@
       "text/plain": [
        "             station  temp_diff       lon        lat\n",
        "0  70:ee:50:00:36:40  -0.144566 -5.848340  43.356196\n",
-       "1  70:ee:50:00:c9:6e  -1.108802 -5.849700  43.361700\n",
-       "2  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765\n",
-       "3  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374\n",
-       "4  70:ee:50:02:e6:38  -0.261849 -5.816177  43.441605"
+       "1  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765\n",
+       "2  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374\n",
+       "3  70:ee:50:02:e6:38  -0.261849 -5.816177  43.441605\n",
+       "4  70:ee:50:03:d3:54   1.404223 -5.864682  43.368613"
       ]
      },
      "execution_count": 2,
@@ -182,15 +182,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>70:ee:50:00:c9:6e</td>\n",
-       "      <td>-1.108802</td>\n",
-       "      <td>-5.849700</td>\n",
-       "      <td>43.361700</td>\n",
-       "      <td>269087.159811</td>\n",
-       "      <td>4.804927e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>70:ee:50:00:ea:00</td>\n",
        "      <td>2.147818</td>\n",
        "      <td>-5.866472</td>\n",
@@ -199,7 +190,7 @@
        "      <td>4.805758e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>70:ee:50:01:33:6a</td>\n",
        "      <td>0.029142</td>\n",
        "      <td>-5.847184</td>\n",
@@ -208,13 +199,22 @@
        "      <td>4.804772e+06</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>70:ee:50:02:e6:38</td>\n",
        "      <td>-0.261849</td>\n",
        "      <td>-5.816177</td>\n",
        "      <td>43.441605</td>\n",
        "      <td>272103.634556</td>\n",
        "      <td>4.813709e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70:ee:50:03:d3:54</td>\n",
+       "      <td>1.404223</td>\n",
+       "      <td>-5.864682</td>\n",
+       "      <td>43.368613</td>\n",
+       "      <td>267899.514735</td>\n",
+       "      <td>4.805736e+06</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -223,17 +223,17 @@
       "text/plain": [
        "             station  temp_diff       lon        lat              x  \\\n",
        "0  70:ee:50:00:36:40  -0.144566 -5.848340  43.356196  269176.485224   \n",
-       "1  70:ee:50:00:c9:6e  -1.108802 -5.849700  43.361700  269087.159811   \n",
-       "2  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765  267755.027780   \n",
-       "3  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374  269286.039379   \n",
-       "4  70:ee:50:02:e6:38  -0.261849 -5.816177  43.441605  272103.634556   \n",
+       "1  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765  267755.027780   \n",
+       "2  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374  269286.039379   \n",
+       "3  70:ee:50:02:e6:38  -0.261849 -5.816177  43.441605  272103.634556   \n",
+       "4  70:ee:50:03:d3:54   1.404223 -5.864682  43.368613  267899.514735   \n",
        "\n",
        "              y  \n",
        "0  4.804312e+06  \n",
-       "1  4.804927e+06  \n",
-       "2  4.805758e+06  \n",
-       "3  4.804772e+06  \n",
-       "4  4.813709e+06  "
+       "1  4.805758e+06  \n",
+       "2  4.804772e+06  \n",
+       "3  4.813709e+06  \n",
+       "4  4.805736e+06  "
       ]
      },
      "execution_count": 4,
@@ -826,21 +826,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>70:ee:50:00:c9:6e</td>\n",
-       "      <td>-1.108802</td>\n",
-       "      <td>-5.849700</td>\n",
-       "      <td>43.361700</td>\n",
-       "      <td>269087.159811</td>\n",
-       "      <td>4.804927e+06</td>\n",
-       "      <td>0.599041</td>\n",
-       "      <td>0.020241</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.235481</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.300652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>70:ee:50:00:ea:00</td>\n",
        "      <td>2.147818</td>\n",
        "      <td>-5.866472</td>\n",
@@ -855,7 +840,7 @@
        "      <td>0.288390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>70:ee:50:01:33:6a</td>\n",
        "      <td>0.029142</td>\n",
        "      <td>-5.847184</td>\n",
@@ -870,7 +855,7 @@
        "      <td>0.302511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>70:ee:50:02:e6:38</td>\n",
        "      <td>-0.261849</td>\n",
        "      <td>-5.816177</td>\n",
@@ -884,6 +869,21 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70:ee:50:03:d3:54</td>\n",
+       "      <td>1.404223</td>\n",
+       "      <td>-5.864682</td>\n",
+       "      <td>43.368613</td>\n",
+       "      <td>267899.514735</td>\n",
+       "      <td>4.805736e+06</td>\n",
+       "      <td>0.641413</td>\n",
+       "      <td>0.018606</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.250861</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.292151</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -891,17 +891,17 @@
       "text/plain": [
        "             station  temp_diff       lon        lat              x  \\\n",
        "0  70:ee:50:00:36:40  -0.144566 -5.848340  43.356196  269176.485224   \n",
-       "1  70:ee:50:00:c9:6e  -1.108802 -5.849700  43.361700  269087.159811   \n",
-       "2  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765  267755.027780   \n",
-       "3  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374  269286.039379   \n",
-       "4  70:ee:50:02:e6:38  -0.261849 -5.816177  43.441605  272103.634556   \n",
+       "1  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765  267755.027780   \n",
+       "2  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374  269286.039379   \n",
+       "3  70:ee:50:02:e6:38  -0.261849 -5.816177  43.441605  272103.634556   \n",
+       "4  70:ee:50:03:d3:54   1.404223 -5.864682  43.368613  267899.514735   \n",
        "\n",
        "              y       svf       gli  nbai       mdt  ndti       lst  \n",
        "0  4.804312e+06  0.665487  0.018285   0.0  0.282612   0.0  0.276092  \n",
-       "1  4.804927e+06  0.599041  0.020241   0.0  0.235481   0.0  0.300652  \n",
-       "2  4.805758e+06  0.672728  0.018195   0.0  0.240917   0.0  0.288390  \n",
-       "3  4.804772e+06  0.645373  0.020396   0.0  0.239327   0.0  0.302511  \n",
-       "4  4.813709e+06       NaN       NaN   NaN       NaN   NaN       NaN  "
+       "1  4.805758e+06  0.672728  0.018195   0.0  0.240917   0.0  0.288390  \n",
+       "2  4.804772e+06  0.645373  0.020396   0.0  0.239327   0.0  0.302511  \n",
+       "3  4.813709e+06       NaN       NaN   NaN       NaN   NaN       NaN  \n",
+       "4  4.805736e+06  0.641413  0.018606   0.0  0.250861   0.0  0.292151  "
       ]
      },
      "execution_count": 13,
@@ -968,19 +968,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>70:ee:50:00:c9:6e</td>\n",
-       "      <td>-1.108802</td>\n",
-       "      <td>-5.849700</td>\n",
-       "      <td>43.361700</td>\n",
-       "      <td>0.599041</td>\n",
-       "      <td>0.020241</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.235481</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.300652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>70:ee:50:00:ea:00</td>\n",
        "      <td>2.147818</td>\n",
        "      <td>-5.866472</td>\n",
@@ -993,7 +980,7 @@
        "      <td>0.288390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>70:ee:50:01:33:6a</td>\n",
        "      <td>0.029142</td>\n",
        "      <td>-5.847184</td>\n",
@@ -1006,7 +993,7 @@
        "      <td>0.302511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>70:ee:50:02:e6:38</td>\n",
        "      <td>-0.261849</td>\n",
        "      <td>-5.816177</td>\n",
@@ -1018,6 +1005,19 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>70:ee:50:03:d3:54</td>\n",
+       "      <td>1.404223</td>\n",
+       "      <td>-5.864682</td>\n",
+       "      <td>43.368613</td>\n",
+       "      <td>0.641413</td>\n",
+       "      <td>0.018606</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.250861</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.292151</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1025,17 +1025,17 @@
       "text/plain": [
        "             station  temp_diff       lon        lat       svf       gli  \\\n",
        "0  70:ee:50:00:36:40  -0.144566 -5.848340  43.356196  0.665487  0.018285   \n",
-       "1  70:ee:50:00:c9:6e  -1.108802 -5.849700  43.361700  0.599041  0.020241   \n",
-       "2  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765  0.672728  0.018195   \n",
-       "3  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374  0.645373  0.020396   \n",
-       "4  70:ee:50:02:e6:38  -0.261849 -5.816177  43.441605       NaN       NaN   \n",
+       "1  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765  0.672728  0.018195   \n",
+       "2  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374  0.645373  0.020396   \n",
+       "3  70:ee:50:02:e6:38  -0.261849 -5.816177  43.441605       NaN       NaN   \n",
+       "4  70:ee:50:03:d3:54   1.404223 -5.864682  43.368613  0.641413  0.018606   \n",
        "\n",
        "   nbai       mdt  ndti       lst  \n",
        "0   0.0  0.282612   0.0  0.276092  \n",
-       "1   0.0  0.235481   0.0  0.300652  \n",
-       "2   0.0  0.240917   0.0  0.288390  \n",
-       "3   0.0  0.239327   0.0  0.302511  \n",
-       "4   NaN       NaN   NaN       NaN  "
+       "1   0.0  0.240917   0.0  0.288390  \n",
+       "2   0.0  0.239327   0.0  0.302511  \n",
+       "3   NaN       NaN   NaN       NaN  \n",
+       "4   0.0  0.250861   0.0  0.292151  "
       ]
      },
      "execution_count": 14,
@@ -1103,19 +1103,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>70:ee:50:00:c9:6e</td>\n",
-       "      <td>-1.108802</td>\n",
-       "      <td>-5.849700</td>\n",
-       "      <td>43.361700</td>\n",
-       "      <td>0.599041</td>\n",
-       "      <td>0.020241</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.235481</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.300652</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
        "      <td>70:ee:50:00:ea:00</td>\n",
        "      <td>2.147818</td>\n",
        "      <td>-5.866472</td>\n",
@@ -1128,7 +1115,7 @@
        "      <td>0.288390</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>70:ee:50:01:33:6a</td>\n",
        "      <td>0.029142</td>\n",
        "      <td>-5.847184</td>\n",
@@ -1141,7 +1128,7 @@
        "      <td>0.302511</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <th>4</th>\n",
        "      <td>70:ee:50:03:d3:54</td>\n",
        "      <td>1.404223</td>\n",
        "      <td>-5.864682</td>\n",
@@ -1153,6 +1140,19 @@
        "      <td>0.0</td>\n",
        "      <td>0.292151</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>70:ee:50:04:f0:c2</td>\n",
+       "      <td>1.839838</td>\n",
+       "      <td>-5.846042</td>\n",
+       "      <td>43.365700</td>\n",
+       "      <td>0.591205</td>\n",
+       "      <td>0.023223</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.193214</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.329532</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1160,17 +1160,17 @@
       "text/plain": [
        "             station  temp_diff       lon        lat       svf       gli  \\\n",
        "0  70:ee:50:00:36:40  -0.144566 -5.848340  43.356196  0.665487  0.018285   \n",
-       "1  70:ee:50:00:c9:6e  -1.108802 -5.849700  43.361700  0.599041  0.020241   \n",
-       "2  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765  0.672728  0.018195   \n",
-       "3  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374  0.645373  0.020396   \n",
-       "5  70:ee:50:03:d3:54   1.404223 -5.864682  43.368613  0.641413  0.018606   \n",
+       "1  70:ee:50:00:ea:00   2.147818 -5.866472  43.368765  0.672728  0.018195   \n",
+       "2  70:ee:50:01:33:6a   0.029142 -5.847184  43.360374  0.645373  0.020396   \n",
+       "4  70:ee:50:03:d3:54   1.404223 -5.864682  43.368613  0.641413  0.018606   \n",
+       "6  70:ee:50:04:f0:c2   1.839838 -5.846042  43.365700  0.591205  0.023223   \n",
        "\n",
        "   nbai       mdt  ndti       lst  \n",
        "0   0.0  0.282612   0.0  0.276092  \n",
-       "1   0.0  0.235481   0.0  0.300652  \n",
-       "2   0.0  0.240917   0.0  0.288390  \n",
-       "3   0.0  0.239327   0.0  0.302511  \n",
-       "5   0.0  0.250861   0.0  0.292151  "
+       "1   0.0  0.240917   0.0  0.288390  \n",
+       "2   0.0  0.239327   0.0  0.302511  \n",
+       "4   0.0  0.250861   0.0  0.292151  \n",
+       "6   0.0  0.193214   0.0  0.329532  "
       ]
      },
      "execution_count": 15,
